--- a/main.css
+++ b/main.css
@@ -174,6 +174,7 @@
     margin: auto;
     flex: 1;
     font-size: 14px;
+
 }
 /* Product */
 #product h2::before{
@@ -260,7 +261,7 @@
 #services .promote .promote-btn{
     border: 1px solid #fff;
     white-space: nowrap;
-    /* background: #005528; */
+    text-align: center;
 }
 #services .promote-content{
     color: #fff;
